--- a/Articulos/mujer.html
+++ b/Articulos/mujer.html
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../Comentarios/comentarios.html">COMENTARIOS</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../Carrito/carrito.html">CARRITO</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -53,37 +56,57 @@
             <p class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
             <p class="tituloM__Descripcion">Incluye tarjetero y correa</p>
             <p class="tituloM__Descripcion">Colores: beige, negro y rojo (Consultar colores)</p>
+            <p class="tituloM__Descripcion">Precio: 4000$</p>
         </list>
         <div id="carouselCarteraV" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color beige">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color beige">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_rojo.jpg" alt="Cartera logo V color rojo">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color negro">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_rojo.jpg" alt="Cartera logo V color rojo">
-            </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/V/v_beige.jpg" alt="Cartera logo V color negro">
-            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraV" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraV" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden"></span>
+            </button>
+        </div>
+        <div class="anadirAlCarritoCarteraV">
+            <p>Añadir al Carrito</p>
+            <select name="cantidad" id="cantidadCarteraV">
+                <option selected>Elegir cantidad</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <select name="cantidad" id="colorCarteraV">
+                <option selected>Elegir color</option>
+                <option value="beige">Beige</option>
+                <option value="negro">Negro</option>
+                <option value="rojo">Rojo</option>
+            </select>
+            <button class="agregar" id="agregarCarteraV" onclick="agregarCarteraVAlCarrito">Agregar al carrito</button>
         </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraV" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraV" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </button>
-        </div>
 
         <list class="infoDeCarteraWaffle">
             <p style="text-align: right;" class="tituloM">Cartera Waffle </p>
             <p style="text-align: right;" class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
             <p style="text-align: right;" class="tituloM__Descripcion">Colores: blanco, negro y rosa (Consultar colores)</p>
             <p style="text-align: right;" class="tituloM__Descripcion">Incluye correa</p>
+            <p style="text-align: right;" class="tituloM__Descripcion">Precio 3900$</p>
         </list>
-
         <div id="carouselCarteraWaffle" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -105,7 +128,6 @@
                 <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Waffle/Waffle_rosa_perspectiva.jpg" alt="Cartera relieve waffle color rosa en perspectiva">
             </div>
         </div>
-
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraWaffle" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden"></span>
@@ -115,12 +137,32 @@
             <span class="visually-hidden"></span>
         </button>
         </div>
+        <div class="anadirAlCarritoCarteraWaffle">
+            <p>Añadir al Carrito</p>
+            <select name="cantidad" id="cantidadCarteraWaffle">
+                <option selected>Elegir cantidad</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <select name="cantidad" id="colorCarteraWaffle">
+                <option selected>Elegir color</option>
+                <option value="blanco">Blanco</option>
+                <option value="negro">Negro</option>
+                <option value="rosa">Rosa</option>
+            </select>
+            <button class="agregar" id="agregarCarteraWaffle" onclick="agregarCarteraWaffleAlCarrito">Agregar al carrito</button>
+        </div>
+
 
         <list class="infoDeCarteraCiervo">
             <p class="tituloM">Cartera Ciervo </p>
             <p class="tituloM__Descripcion">Cartera importada de eco-cuero</p>
             <p class="tituloM__Descripcion">Incluye correa</p>
             <p class="tituloM__Descripcion">Colores: camel, negro y rosa (Consultar colores)</p>
+            <p class="tituloM__Descripcion">Precio: 4100$</p>
         </list>
 
         <div id="carouselCarteraCiervo" class="carousel slide" data-bs-ride="carousel">
@@ -145,6 +187,26 @@
             <span class="visually-hidden"></span>
         </button>
         </div>
+        <div class="anadirAlCarritoCarteraCiervo">
+            <p>Añadir al Carrito</p>
+            <select name="cantidad" id="cantidadCarteraCiervo">
+                <option selected>Elegir cantidad</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <select name="cantidad" id="colorCarteraCiervo">
+                <option selected>Elegir color</option>
+                <option value="Camel">Camel</option>
+                <option value="negro">Negro</option>
+                <option value="rosa">Rosa</option>
+            </select>
+            <button class="agregar" id="agregarCarteraCiervo" onclick="agregarCarteraCiervoAlCarrito">Agregar al carrito</button>
+        </div>
+
+
 
         <list class="infoDeCarteraCuadro">
             <p style="text-align: right;" class="tituloM">Cartera Cuadros </p>
@@ -154,38 +216,59 @@
         </list>
 
         <div id="carouselCarteraCuadro" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_T.jpg" alt="Cartera relieve a cuadros todos">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_T.jpg" alt="Cartera relieve a cuadros todos">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_negro.jpg" alt="Cartera relieve a cuadros color negro">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_blanco.jpg" alt="Cartera relieve a cuadros color blanco">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_suela.jpg" alt="Cartera relieve a cuadros color suela">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_kaqui.jpg" alt="Cartera relieve a cuadros color">
+                </div>
+                <div class="carousel-item">
+                    <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_rojo.jpg" alt="Cartera relieve a cuadros color rojo">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_negro.jpg" alt="Cartera relieve a cuadros color negro">
-            </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_blanco.jpg" alt="Cartera relieve a cuadros color blanco">
-            </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_suela.jpg" alt="Cartera relieve a cuadros color suela">
-            </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_kaqui.jpg" alt="Cartera relieve a cuadros color">
-            </div>
-            <div class="carousel-item">
-                <img class="carteraMujer" src="../multimedia/Mujer/Carteras/Cuadro/cuadro_rojo.jpg" alt="Cartera relieve a cuadros color rojo">
-            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraCuadro" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraCuadro" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden"></span>
+            </button>
+        </div>
+        <div class="anadirAlCarritoCarteraCuadro">
+            <p>Añadir al Carrito</p>
+            <select name="cantidad" id="cantidadCarteraCuadro">
+                <option selected>Elegir cantidad</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+            <select name="cantidad" id="colorCarteraCuadro">
+                <option selected>Elegir color</option>
+                <option value="blanco">Blanco</option>
+                <option value="kaqui">Kaqui</option>
+                <option value="negro">Negro</option>
+                <option value="rojo">Rojo</option>
+                <option value="suela">Suela</option>
+            </select>
+            <button class="agregar" id="agregarCarteraCuadro" onclick="agregarCarteraCuadroAlCarrito">Agregar al carrito</button>
         </div>
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselCarteraCuadro" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselCarteraCuadro" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden"></span>
-        </button>
-        </div>
-
-    </div>  
+    </div> 
+    <script src="../javascript/javascriptCarrito.js"></script>
 </body>
 <footer class="footer"> 
     <h5>Sager</h5   >
